--- a/src/sections/Hero/Hero.scss
+++ b/src/sections/Hero/Hero.scss
@@ -153,15 +153,15 @@
 
       h1 {
         text-transform: uppercase;
-        font-size: 8rem;
+        font-size: 2.5rem;
         font-weight: 800;
-        letter-spacing: -8px;
-        line-height: 9rem;
+        letter-spacing: -4px;
+        line-height: 2.5rem;
         width: 80%;
       }
 
       p {
-        width: 15%;
+        width: 50%;
         font-size: .6rem;
         font-weight: 800;
         text-transform: uppercase;
@@ -180,10 +180,10 @@
 
       h1 {
         text-transform: uppercase;
-        font-size: 11rem;
+        font-size: 3.75rem;
         font-weight: 700;
-        letter-spacing: -12px;
-        line-height: 8.5rem;
+        letter-spacing: -6px;
+        line-height: 4rem;
       }
 
       .ingredients {
@@ -198,7 +198,7 @@
       }
 
       p {
-        width: 20%;
+        width: 95%;
         text-align: center;
         margin-top: 3rem;
       }
@@ -207,10 +207,10 @@
     .rightDiv {
       .rightContent {
         position: relative;
-        left: 30%;
+        left: 20%;
 
         p {
-          width: 15rem;
+          width: 12rem;
           margin-bottom: 1rem;
           text-align: start;
         }
@@ -234,10 +234,10 @@
       align-items: start;
 
       #subHeading {
-        font-size: 9rem;
+        font-size: 3.25rem;
         font-weight: 800;
-        letter-spacing: -12px;
-        line-height: 7.5rem;
+        letter-spacing: -4px;
+        line-height: 4rem;
       }
     }
   }
@@ -276,7 +276,7 @@
         font-weight: 800;
       }
 
-      #box1, #box2 {
+      #box1, .box2 {
         height: 10.3%;
 
         .p2 {
@@ -289,6 +289,54 @@
           width: 10rem;
           font-size: 0.85rem;
           font-weight: 800;
+        }
+      }
+
+      .box2 {
+        height: 14.3%;
+
+        h1 {
+          font-size: 5rem;
+          line-height: 4.5rem;
+        }
+
+        p {
+          font-size: 1rem;
+        }
+      }
+
+      .box3, .rightDiv, .leftDiv {
+        margin-top: 8rem;
+        height: 60vh;
+
+        h1 {
+          font-size: 7.5rem;
+          line-height: 7rem;
+        }
+
+        .ingredients {
+          img {
+            width: 4rem;
+            height: 4rem;
+          }
+        }
+
+        p {
+          width: 65%;
+          font-size: 1.15rem;
+        }
+      }
+
+      .rightDiv {
+        .rightContent {
+          left: 30%;
+        }
+      }
+
+      .leftDiv {
+        #subHeading {
+          font-size: 6rem;
+          line-height: 5rem;
         }
       }
     }
@@ -328,7 +376,7 @@
         font-weight: 800;
       }
 
-      #box1, #box2 {
+      #box1 {
         height: 6%;
 
         .p2 {
